Add twitter button

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="some test post" />
+    <meta name="twitter:title" content="some test post" />
+    <meta name="twitter:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
+    <a
+      class="twitter-share-button"
+      href="https://twitter.com/intent/tweet?text=Hello%20world"
+      data-size="large"
+    >
+      Tweet</a
+    >
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
