--- a/index.html
+++ b/index.html
@@ -5,10 +5,196 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="some test post" />
-    <meta name="twitter:title" content="some test post" />
-    <meta name="twitter:image" content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg" />
+    <meta
+      name="twitter:image"
+      content="http://graphics8.nytimes.com/images/2011/12/08/technology/bits-newtwitter/bits-newtwitter-tmagArticle.jpg"
+    />
     <title>Vite + React</title>
+
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8" />
+    <title data-static-tag-from="prerender">
+      When The Worst Has Happened | Seeking Alpha Marketplace1
+    </title>
+    <link rel="preconnect" href="https://static.seekingalpha.com" />
+    <link rel="preconnect" href="https://static1.seekingalpha.com" />
+    <link rel="preconnect" href="https://static2.seekingalpha.com" />
+    <link rel="preconnect" href="https://static3.seekingalpha.com" />
+    <link
+      rel="preconnect"
+      href="https://www.googletagmanager.com"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preconnect"
+      href="https://www.google-analytics.com"
+      crossorigin="anonymous"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,viewport-fit=cover,maximum-scale=1"
+    />
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <meta name="application-name" content="Seeking Alpha" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="SeekingAlpha" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-itunes-app" content="app-id=552799694" />
+    <meta name="format-detection" content="telephone=yes" />
+    <meta name="theme-color" content="#333333" />
+    <meta property="fb:app_id" content="159723149420031" />
+    <meta property="fb:pages" content="224867310939090" />
+    <meta content="SeekingAlpha" property="al:ios:app_name" />
+    <meta content="552799694" property="al:ios:app_store_id" />
+    <meta content="SeekingAlpha" property="al:android:app_name" />
+    <meta content="com.seekingalpha.webwrapper" property="al:android:package" />
+    <meta
+      name="google-site-verification"
+      content="8arRaWMkVniCnxJWf9hbm-0PYkb_LhjaXAk7rGd97iw"
+    />
+    <meta name="msvalidate.01" content="0FEA0055AC330065CFA87CA3045E9860" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Seeking Alpha" />
+    <link
+      rel="mask-icon"
+      href="/samw/static/images/favicon.svg"
+      color="#ff7200"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon.png"
+    />
+    <link
+      sizes="57x57"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-57x57.png"
+    />
+    <link
+      sizes="60x60"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-60x60.png"
+    />
+    <link
+      sizes="72x72"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-72x72.png"
+    />
+    <link
+      sizes="76x76"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-76x76.png"
+    />
+    <link
+      sizes="114x114"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-114x114.png"
+    />
+    <link
+      sizes="120x120"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-120x120.png"
+    />
+    <link
+      sizes="144x144"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-144x144.png"
+    />
+    <link
+      sizes="152x152"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-152x152.png"
+    />
+    <link
+      sizes="180x180"
+      rel="apple-touch-icon"
+      href="/samw/static/images/apple-touch-icon-180x180.png"
+    />
+    <link
+      sizes="16x16"
+      rel="icon"
+      type="image/png"
+      href="/samw/static/images/favicon-16x16.png"
+    />
+    <link
+      sizes="32x32"
+      rel="icon"
+      type="image/png"
+      href="/samw/static/images/favicon-32x32.png"
+    />
+    <link
+      sizes="32x32"
+      rel="icon"
+      type="image/png"
+      href="/samw/static/images/favicon-96x96.png"
+    />
+    <link
+      sizes="192x192"
+      rel="icon"
+      type="image/png"
+      href="/samw/static/images/favicon-192x192.png"
+    />
+    <link
+      href="https://seekingalpha.com/javascripts/seeking.xml"
+      title="Seeking Alpha's Symbol search"
+      type="application/opensearchdescription+xml"
+    />
+    <link
+      rel="manifest"
+      href="/samw/manifest.52d7d67ec34303436765800b76c0582e.json"
+    />
+    <link
+      as="fetch"
+      crossorigin=""
+      href="/api/v3/breaking_news"
+      rel="preload"
+      type="application/json"
+    />
+    <link
+      as="fetch"
+      crossorigin=""
+      href="/api/v3/marketing_campaigns"
+      rel="preload"
+      type="application/json"
+    />
+    <meta
+      content="When The Worst Has Happened | Seeking Alpha Marketplace2"
+      name="twitter:title"
+    />
+    <meta content="summary" name="twitter:card" />
+    <meta content="@SeekingAlpha" name="twitter:site" />
+    <meta
+      content="https://static.seekingalpha.com/assets/og_image_1200-29b2bfe1a595477db6826bd2126c63ac2091efb7ec76347a8e7f81ba17e3de6c.png"
+      name="twitter:image"
+    />
+    <meta
+      content="When The Worst Has Happened | Seeking Alpha Marketplace3"
+      data-rendered-from="server"
+      property="og:title"
+    />
+    <meta content="website" data-rendered-from="server" property="og:type" />
+    <meta
+      content="https://seekingalpha.com/mp/1006-high-dividend-opportunities/articles/5882022-when-the-worst-has-happened"
+      data-rendered-from="server"
+      property="og:url"
+    />
+    <link
+      data-rendered-from="server"
+      href="https://seekingalpha.com/javascripts/seeking.xml"
+      rel="search"
+      title="When The Worst Has Happened | Seeking Alpha Marketplace4"
+      type="application/opensearchdescription+xml"
+    />
+    <link
+      data-rendered-from="server"
+      href="https://seekingalpha.com/mp/1006-high-dividend-opportunities/articles/5882022-when-the-worst-has-happened"
+      rel="canonical"
+    />
+    <meta
+      content="https://static.seekingalpha.com/assets/og_image_1200-29b2bfe1a595477db6826bd2126c63ac2091efb7ec76347a8e7f81ba17e3de6c.png"
+      data-rendered-from="server"
+      property="og:image"
+    />
   </head>
   <body>
     <div id="root"></div>
