--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
       type="application/json"
     />
     <meta
+      content="When The Worst Has Happened | Seeking Alpha Marketplace4"
+      name="og:title"
+    />
+    <meta
       content="When The Worst Has Happened | Seeking Alpha Marketplace2"
       name="twitter:title"
     />
